# rox-icu

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  description.md  docker-compose.yml  mount_device.sh  prepare_host.sh  pyproject.toml  requirements.txt  tasks.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  init_container.sh  requirements-dev.txt  requirements.txt
benchmarks/: can_messages.py  single_loop.py
dev/: README.md  remote_io.py
dev/embedded/: remote_io_simulator.py  show_pins.py
dev/pc/: 001_basic_commands.py  002_monitor_icus.py  basic_commands.py  remote_io.py  set_output.py
docs/: dbc_creation.md
embedded/: .pylintrc  README.md  cpy_requirements.txt  install_rio.sh  tasks.py
embedded/benchmarks/: can_messages.py  measure_time.py  send_can_messages.py  sleep_time_bench.py
embedded/examples/: 201_max_outputs.py  301_board_demo.py  302_bar_demo.py  302a_receive_analog.py  README.md  hello_feather.py
embedded/examples/arduino/: hello_feather.py
embedded/lib/: can_protocol.py  icu_board.py  max14906.py
embedded/remote_io/: README.md  main.py  settings.toml
embedded_fw/: README.md  remote_io.py
embedded_lib/: can_protocol.py  icu_board.py  max14906.py
examples/: 101_hello_icu.py  102_hello_can.py  102_max_outputs.py  201_max_outputs.py  202_max_inputs.py  301_board_demo.py  302_bar_demo.py  303_remote_io.py  cycle_outputs.py  rio_wait_and_toggle.py  wait_and_toggle.py
examples/arduino/blink/: README.md  platformio.ini
examples/arduino/flash_neopixel.ino/: flash_neopixel.ino.ino
examples/embedded/: 102_hello_can.py  301_board_demo.py
examples/embedded/arduino/: can_tx.ino
examples/embedded/arduino/flash_neopixel.ino/: flash_neopixel.ino.ino
examples/scripts/: monitor_can.sh
firmware/: adafruit-circuitpython-feather_m4_can-en_US-9.0.5.uf2  bootloader-feather_m4_can-v3.16.0.hex  update-bootloader-feather_m4_can-v3.16.0.uf2
libraries/: can_protocol.py  can_utils.py  ecu_board.py  icu_board.py  max14906.py
pcb/: README.md
scratch/embedded/: remote_io_simulator.py
scratch/pc/: basic_commands.py  start_mocks.sh
src/rox_icu/: bit_ops.py  can_protocol.py  can_utils.py  cli.py  core.py  inspector.py  mock.py  monitor.py  utils.py  version.py
src/rox_icu/dbc/: __init__.py  rox_icu.dbc
src/rox_icu/examples/: wait_and_toggle.py
src/rox_icu/firmware/: README.md
src/rox_icu/firmware/mocks/: __init__.py  canio.py  digitalio.py  (+3 more)
tests/: conftest.py  test_can_utils.py  test_core.py  test_dbc.py  test_ids.py  test_integral.py  test_mock.py  test_protocol.py
(+3 files in other folders)
